# templatizator

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  MANIFEST.in  Pipfile  README.md  __main__.py  app.py  debug.py  requirements.txt  setup.cfg  setup.py  start.py  tox.ini
domain/: application.py  container.py  helper.py  infrastructure.py  model.py  repository.py  service.py
gui/: EditorDialog.py  GuiHandler.py  VariablesDialog.py  VariablesSection.py  Window.py  gui.glade  gui.ui  gui_new.glade  init.py  main-gui.glade
locales/: translation.py
locales/en/LC_MESSAGES/: base.po
locales/es/LC_MESSAGES/: base.po
locales/fr/LC_MESSAGES/: base.po
locales/pt_BR/LC_MESSAGES/: base.po
presentation/: __init__.py  application.py  configurable_editor.py  container.py  editor.py  helper.py  interface.ui  start.py  variables.py  window.py
src/: Configuration.py  Node.py  Util.py
templatizator/: __init__.py
templatizator/domain/: application.py  container.py  domain.py  helper.py  infrastructure.py  repository.py  service.py
templatizator/locales/: i18n.py
templatizator/locales/en/LC_MESSAGES/: base.po
templatizator/locales/es/LC_MESSAGES/: base.po
templatizator/presentation/: __init__.py  configurable_editor.py  container.py  editor.py  helper.py  interface.ui  variables.py  widgets.py  window.py
tests/: __init__.py  file_application_test_helper.py  test_application.py  test_configurable_application.py  test_presentation_window.py  test_project_application.py  test_template_application.py  test_variable_application.py
(+1 files in other folders)
