[metadata]
name = Templatizator
author = Jhonas Nascimento
author-email = jhonasn@gmail.com
version = 1.0.0
summary = Create sets of template files at software projects or some directory
description-file = README.md
description-content-type = text/markdown; charset=UTF8
project-urls =
  Documentation = https://github.com/jhonasn/templatizator
license = MIT
classifier =
  Development Status :: 3 Alpha
  Environment :: X11 Applications
  Environment :: Win32 (MS Windows)
  Intended Audience :: Developers
  Intended Audience :: End Users/Desktop
  Intended Audience :: Other Audience
  Natural Language :: English
  Natural Language :: French
  Natural Language :: Portuguese (Brazilian)
  Natural Language :: Spanish
  License :: OSI Approved :: MIT Licence
  Programming Language :: Python
  Programming Language :: Python :: 3 :: Only
keywords =
  project
  template
  configurable
  file
  DDD
  set
platforms =
  Operating System :: POSIX
  Operating System :: POSIX :: Linux
  Operating System :: Microsoft
  Operating System :: Microsoft :: Windows

[files]
packages = templatizator/*
data_files =
  templatizator/presentation = templatizator/presentation/interface.ui

[extract_messages]
input_dirs = templatizator
output_file = templatizator/locales/base.pot

[compile_catalog]
domain = base
directory = templatizator/locales
